--- a/package.json
+++ b/package.json
@@ -1,68 +1,64 @@
 {
-  "name": "vite-template",
+  "name": "hushweb",
   "private": true,
-  "version": "0.0.0",
+  "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-    "preview": "vite preview"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@heroui/accordion": "^2.2.7",
-    "@heroui/autocomplete": "^2.3.10",
     "@heroui/button": "2.2.9",
-    "@heroui/card": "^2.2.9",
     "@heroui/code": "2.2.6",
-    "@heroui/drawer": "^2.2.7",
-    "@heroui/dropdown": "2.3.9",
-    "@heroui/image": "^2.2.5",
     "@heroui/input": "2.4.9",
     "@heroui/kbd": "2.2.6",
     "@heroui/link": "2.2.7",
-    "@heroui/modal": "^2.2.7",
     "@heroui/navbar": "2.2.8",
-    "@heroui/pagination": "^2.2.8",
-    "@heroui/radio": "^2.3.8",
-    "@heroui/scroll-shadow": "^2.3.5",
     "@heroui/snippet": "2.2.10",
-    "@heroui/spacer": "^2.2.6",
     "@heroui/switch": "2.2.8",
     "@heroui/system": "2.4.6",
-    "@heroui/table": "^2.2.8",
     "@heroui/theme": "2.4.5",
-    "@react-aria/visually-hidden": "3.8.12",
-    "@react-types/shared": "3.26.0",
-    "clsx": "2.1.1",
-    "framer-motion": "11.15.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "6.23.0",
-    "tailwind-variants": "0.1.20",
-    "tailwindcss": "3.4.16"
+    "@heroui/use-theme": "2.1.1",
+    "@react-aria/ssr": "^3.9.7",
+    "@react-aria/visually-hidden": "^3.8.18",
+    "@remix-run/node": "^2.15.1",
+    "@remix-run/react": "^2.15.1",
+    "@remix-run/serve": "^2.15.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.14.3",
+    "isbot": "^4.1.0",
+    "next-themes": "^0.4.4",
+    "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^7.1.3",
+    "remix-utils": "^8.0.0",
+    "tailwind-variants": "^0.3.0"
   },
   "devDependencies": {
-    "@types/node": "20.5.7",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.11.0",
-    "@typescript-eslint/parser": "8.11.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "^7.23.2",
+    "@remix-run/dev": "^2.15.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "4.1.4",
-    "postcss": "8.4.38",
-    "prettier": "3.3.3",
-    "typescript": "5.6.3",
-    "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.1.6",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
