--- a/package.json
+++ b/package.json
@@ -1,64 +1,23 @@
 {
   "name": "hushweb",
-  "private": true,
-  "sideEffects": false,
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@heroui/button": "2.2.9",
-    "@heroui/code": "2.2.6",
-    "@heroui/input": "2.4.9",
-    "@heroui/kbd": "2.2.6",
-    "@heroui/link": "2.2.7",
-    "@heroui/navbar": "2.2.8",
-    "@heroui/snippet": "2.2.10",
-    "@heroui/switch": "2.2.8",
-    "@heroui/system": "2.4.6",
-    "@heroui/theme": "2.4.5",
-    "@heroui/use-theme": "2.1.1",
-    "@react-aria/ssr": "^3.9.7",
-    "@react-aria/visually-hidden": "^3.8.18",
-    "@remix-run/node": "^2.15.1",
-    "@remix-run/react": "^2.15.1",
-    "@remix-run/serve": "^2.15.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.14.3",
-    "isbot": "^4.1.0",
-    "next-themes": "^0.4.4",
-    "process": "^0.11.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^7.1.3",
-    "remix-utils": "^8.0.0",
-    "tailwind-variants": "^0.3.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.15.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
-  },
-  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
-  "engines": {
-    "node": ">=20.0.0"
+    "@astrojs/react": "^4.1.5",
+    "@astrojs/tailwind": "^5.1.4",
+    "@heroui/react": "^2.6.13",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.1.7",
+    "framer-motion": "^11.18.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
