--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.7",
     "framer-motion": "^11.18.1",
+    "hushweb": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17"
